--- a/todolistFront/index.html
+++ b/todolistFront/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="h-screen bg-gray-700 flex items-center justify-center">
+  <body class="min-h-screen bg-gray-700 flex items-center justify-center">
     <div id="root" class="w-[90%] flex justify-center bg-gray-100 rounded-xl md:w-[75%] lg:w-[60%]"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
