Se le cambio el width a la pantalla más grande, se dejo el max-w en un 40%

--- a/todolistFront/index.html
+++ b/todolistFront/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body class="min-h-screen bg-gray-700 flex items-center justify-center">
-    <div id="root" class="w-[90%] flex justify-center bg-gray-100 rounded-xl md:w-[75%] lg:w-[60%]"></div>
+    <div id="root" class="w-[90%] flex justify-center bg-gray-100 rounded-xl md:w-[75%] lg:max-w-[45%]"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
